--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,8 @@
     "browser": true,
     "es2021": true
   },
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "react/no-unescaped-entities": ["error", {"forbid": [">", "}"]}]
+  }
 }
