--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "redux-persist": "^6.0.0",
     "sass": "^1.66.1"
   },
   "devDependencies": {
